[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vsepr-pykernel"
version = "3.0.0"
description = "PyKernel — Python bridge to VSEPR-SIM atomistic simulation engine"
readme = "pykernel/README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
gpu = [
    "cupy>=12.0",
]

[project.scripts]
pykernel-run = "pykernel.runner:main"
pykernel-improve = "pykernel.improvement_loop:main"

[tool.setuptools.packages.find]
include = ["pykernel*"]

[tool.pytest.ini_options]
testpaths = ["pykernel/tests"]
